--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-timer-hook": "^3.0.5",
+    "recharts": "^2.1.6",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
